tests/reference/asr-redeclaration1-b66ed3a.stderr
semantic error: Symbol is already declared in the same scope
 --> tests/errors/redeclaration1.f90:4:12
  |
4 | real :: j, idx1
  |            ^^^^ redeclaration
  |
3 | integer :: idx1
  |            ~~~~ original declaration
